# macxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRUBUTING.md  README.md
include/: NSObject.hpp  abi.hpp  api.hpp  base.hpp  id.hpp
include/Foundation/: Foundation.hpp  NSObject.functions.hpp  NSObject.hpp  NSProcessInfo.functions.hpp  NSProcessInfo.hpp  NSString.functions.hpp  NSString.hpp
meta/: Class.cs  Enum.cs  Framework.cs  Helpers.cs  Interface.cs  MetadataWriter.cs  Method.cs  Parser.cs  Patchs.cs  Program.cs  Property.cs  Protocol.cs  Reader.cs  Token.cs  Type.cs  main.m  meta.csproj
meta.interop/: AvailabilityAttribute.cs  SelectorAttribute.cs  interop.csproj
meta/Json/: ClassConverter.cs  EnumConverter.cs  FrameworkConverter.cs  MethodConverter.cs  PropertyConverter.cs  ReaderConverter.cs  Serializer.cs
src/: NSObject.cpp  base.hpp  id.cpp
src/Foundation/: NSObject.cpp  NSProcessInfo.cpp  NSString.cpp
tests/: main.cpp
tests/Foundation/: NSProcessInfo.cpp
